fixed aligning ment for contact form

--- a/styles.css
+++ b/styles.css
@@ -183,3 +183,11 @@ input[type="text"], textarea {
    font-size: 14pt;
  }
 
+ form dl{
+   display: inline-block;
+   vertical-align: top;
+
+ }
+
+
+ 
